--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=production webpack -p"
   },
   "keywords": [
     "webpack",
